--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 
 .news img {
   width: 688px;
-  height: 229px;
+  height: 291px;
   margin-left: 1px;
 }
 
@@ -236,8 +236,9 @@ body {
 }
 
 .business h2 a {
-  text-decoration: none;
-  line-height: 1.2;
+text-decoration: none;
+    line-height: 1.2;
+    font-size: 19px;
 }
 
 .business h3 {
@@ -271,18 +272,24 @@ body {
   color: purple;
 }
 
+
+}
 /*last*/
 
 .last {
-  display: flex;
-  flex-direction: row;
+
+  flex-direction: column;
   margin-bottom: 138px;
   margin: 37px;
+}
+.last{
+  display: flex;
+      margin: 30px;
 }
 
 .last img {
   width: 200px;
-  margin: 20px;
+  margin: 49px;
 }
 .last h3 {
   font-size: 1.5em;
@@ -298,6 +305,7 @@ body {
   font-size: 2em;
   font-weight: bold;
   transition: 0.2s;
+  margin: 47px;
 }
 .last .me li a:hover {
   letter-spacing: 2px;
@@ -438,13 +446,16 @@ footer img {
   }
   .last img {
     width: 177px;
-    margin: 49px;
+    margin: 149px;
     margin-bottom: 12px;
     margin-top: 12px;
+  } .last .me li a{
+margin: 149px;
   }
   .last {
     flex-direction: column;
     flex-wrap: wrap;
+    margin-top: 49px;
   }
   .metro {
     flex-direction: column;
@@ -455,6 +466,10 @@ footer img {
   .search {
     margin-left: 10px;
   }
+  .more {
+    margin-left: 141px;
+    margin-bottom: 44px;
+  }
   .sub {
     margin-left: 10px;
   }
@@ -462,4 +477,41 @@ footer img {
   .metro {
     display: none;
   }
+  .menuToggle.active {
+    background: url(img/close.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: black;
+  }.menuToggle {
+    position: relative;
+    width: 5%;
+    height: 40px;
+    background: url(img/menu.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+  } header .navigation.active {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: pink;
+  } header .navigation li a {
+    color: #111;
+    font-size: 1.6em;
+  } .header .navigation{
+    display: none;
+  }.header .logo {
+  width: 95px;
+  margin-left: -85px;
+}
+
 }
